求知主界面

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -27,12 +27,12 @@
 					</div>
 				</div>
 			</div>
-			<div class="mui-table-view-divider"></div>
+			<!--<div class="mui-table-view-divider"></div>-->
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
-			<a id="submit-question" class="mui-icon iconfont icon-bianji"></a>
+			<a id="submit-question" class="mui-icon iconfont icon-myQuestion"></a>
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
