--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -18,6 +18,8 @@
 		<link rel="stylesheet" href="../../css/cloud/file.css" />
 		<link rel="stylesheet" href="../../css/utils/preview.css" />
 		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
+		<script type="text/javascript" src="../../js/utils/cryption.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/cloud/cloud.js"></script>
@@ -571,15 +573,15 @@
 											pathList.push(element.fpath);
 										}
 									});
-
-									var pathStr = '["' + pathList.join('","') + '"]';
-									//console.log('pathStr:' + pathStr);
-
+									var batchDelete = {
+										appId: 4, //int 必填 项目id
+										urls: pathList //array 必填 需要获取下载token文件的路径
+									}
 									/**
 									 * 七牛批量删除
 									 */
-									CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, pathStr, function(data) {
-											if(data.RspCode == 0) {
+									CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, batchDelete, function(data) {
+											if(data.Status == 1) {
 												//mui.toast('七牛删除成功');
 												console.log('七牛删除成功:' + JSON.stringify(data));
 											} else {
@@ -588,7 +590,7 @@
 											}
 										},
 										function(xhr, type, errorThrown) {
-											mui.toast('七牛删除失败' + JSON.stringify(data));
+											mui.toast('七牛删除失败' + JSON.stringify(type));
 											console.log('七牛删除失败:' + JSON.stringify(type));
 										}
 									);
@@ -704,7 +706,7 @@
 				 * @param {Object} data
 				 */
 				function additem(data) {
-					console.log('additem:' + JSON.stringify(data))
+					//console.log('additem:' + JSON.stringify(data))
 					var li = document.createElement('li');
 					li.setAttribute('id', 'fid_' + data.fid); //元素id
 					li.setAttribute('data-pid', data.pid); //父ID
