--- a/JiaoBaoYun-hb/html/quan/leave.html
+++ b/JiaoBaoYun-hb/html/quan/leave.html
@@ -17,7 +17,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar ">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
-			<!--<a id="pubLeave" class=" mui-icon iconfont icon-xie  mui-pull-right mui-plus-visible common-color-white"></a>-->
+			<a id="pubLeave" class=" mui-icon iconfont icon-xie  mui-pull-right mui-plus-visible common-color-white"></a>
 			<h1 class="mui-title common-color-white common-font-family-Regular">留言板</h1>
 		</header>
 		<div class="mui-content"></div>
@@ -29,6 +29,7 @@
 			var data = plus.webview.currentWebview().data;//留言板拥有者id
 			events.initSubPage('leave-sub.html', data);
 			events.addTap('pubLeave', function() {
+				console.log(JSON.stringify(data))
 				events.openNewWindowWithData('../quan/pub-leave.html', data);
 			})
 		})
