--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -14,7 +14,8 @@
 			}
 
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-				border-right: 1px solid black;
+				border-right: 1px solid #b7b7b7;
+				color: #323232;
 			}
 
 			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item:last-child {
