班级空间 发布按钮
不知道为啥 项目里没啦

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -220,8 +220,8 @@
 						textView.blur();
 						CloudFileUtil.files = [];
 						events.clearChild(document.getElementById('pictures'));
+						events.fireToPageNone('homework-tea-sub.html','homeworkDone');
 						events.fireToPageWithData('homework-commented.html', 'workDetail', jQuery.extend({}, homeworkModel, { HomeworkResultId: data.RspData.HomeworkResultId, workType: 1 }));
-
 					} else {
 						mui.toast(data.RspTxt);
 					}
