--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -18,7 +18,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title">群组名称</h1>
-			<a id="write" class="mui-icon iconfont icon-xie1 mui-pull-right"></a>
+			<a id="write" class="mui-icon iconfont icon-fabu-copy mui-pull-right"></a>
 			<a id="group" class="mui-icon iconfont icon-renren  mui-pull-right"></a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
